--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "zodiacnetwork-bot",
+  "name": "zodiac-bot",
   "version": "0.2.0",
-  "description": "Zodiac",
+  "description": "Moderation discord bot.",
   "main": "main.js",
   "dependencies": {
     "chalk": "^3.0.0",
@@ -22,7 +22,7 @@
     "url": "git+https://github.com/Nukestye/Nukinator-Bot.git"
   },
   "author": "nukestye™",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Nukestye/Nukinator-Bot/issues"
   },
