--- a/package.json
+++ b/package.json
@@ -1,30 +1,36 @@
 {
-  "name": "zodiac-bot",
-  "version": "0.2.0",
-  "description": "Moderation discord bot.",
-  "main": "main.js",
-  "dependencies": {
-    "chalk": "^4.0.0",
-    "discord.js": "^11.6.2",
-    "discord.js-commando": "^0.10.0",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.3",
-    "path": "^0.12.7",
-    "random-puppy": "^1.1.0",
-    "snekfetch": "^4.0.4"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Nukestye/Nukinator-Bot.git"
-  },
-  "author": "nukestye™",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Nukestye/Nukinator-Bot/issues"
-  },
-  "homepage": "https://github.com/Nukestye/Nukinator-Bot#readme"
+    "name": "zodiac-bot",
+    "version": "0.3.2",
+    "description": "Moderation discord bot.",
+    "main": "main.js",
+    "dependencies": {
+        "@discordjs/uws": "^10.149.0",
+        "axios": "^0.19.2",
+        "chalk": "^4.0.0",
+        "discord.js": "^11.6.2",
+        "discord.js-commando": "^0.10.0",
+        "path": "^0.12.7",
+        "snekfetch": "^4.0.4"
+    },
+    "devDependencies": {
+        "eslint": "^7.1.0",
+        "eslint-config-standard": "^14.1.1",
+        "eslint-plugin-import": "^2.20.2",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^4.2.1",
+        "eslint-plugin-standard": "^4.0.1"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Nukestye/Zodiac.git"
+    },
+    "author": "nukestye™",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/Nukestye/Zodiac/issues"
+    },
+    "homepage": "https://github.com/Nukestye/Zodiact#readme"
 }
